--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -4,7 +4,7 @@
 
 <% for room in @rooms %>
   <tr>
-    <td><%=h room.name %></td>
+    <td><%= link_to room.name, room %></td>
     <td><%=h room.subject %></td>
     <td><%= link_to('Destroy', room, :confirm => 'Are you sure?', :method => :delete) if room.destroyable? %></td>
   </tr>
