--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,11 +4,15 @@ body { background: #D7681F; }
 
 a, a:visited { color: #800000; }
 
-#wrapper { width: 700px; margin: 0 auto; }
-#header, #content, #footer { padding: 1em; }
+#wrapper { width: 800px; margin: 0 auto; }
+#header, #container, #footer { padding: 1em; }
 #header a { text-decoration: none; font-size: 3em; 
             font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;}
 #header a:hover { font-style: italic; }
-#content { background: #D3C1B8; 
+#container { background: #D3C1B8; 
            font-family: 'Bookman Old Style', serif; }
+
+#content { float: left; width: 600px; }
+#sidebar { float: right; width: 150px; }
+.clear { clear: both; }
 #footer { font-style: italic; }
