--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,10 @@
-<p>You are logged in as <%= h current_user.login %>. <%= link_to "Logout", logout_path %>.</p>
+<p>
+  <% if logged_in? -%>
+  You are logged in as <%= h current_user.login %>. <%= link_to "Logout", logout_path %>.
+  <% else -%>
+    <%= link_to "Login", login_path %>
+  <% end -%>
+</p>
 
 <p>
   <h3>Rooms</h3>
@@ -9,6 +15,13 @@
   </ul>
 </p>
 
-<p>
-  <h3>People</h3>
-</p>
+<% unless @room.nil? -%>
+  <p>
+    <h3>People</h3>
+    <ul>
+      <% @room.users.each do |user| -%>
+        <li><%= h user.login %></li>
+      <% end -%>
+    </ul>
+  </p>
+<% end -%>
