switch to jquery. add <enter> hotkey

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -20,3 +20,14 @@
     <%= f.submit 'send' %>
   <% end -%>
 <% end -%>
+
+<script>
+  function hotkeys(){
+    jQuery.hotkeys.add('return',function (){ $('#new_message').submit(); });
+  }
+
+  $(document).ready(function(){
+    $('#message_body').focus();
+    hotkeys();
+  });
+</script>
