--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,27 +1,22 @@
-<p>
-  <% if logged_in? -%>
-  You are logged in as <%= h current_user.login %>. <%= link_to "Logout", logout_path %>.
-  <% else -%>
-    <%= link_to "Login", login_path %>
+<h3>Rooms</h3>
+<ul>
+  <% Room.all.each do |room| %>
+    <li><%= link_to h(room.name), room %></li>
   <% end -%>
-</p>
-
-<p>
-  <h3>Rooms</h3>
-  <ul>
-    <% Room.all.each do |room| %>
-      <li><%= link_to h(room.name), room %></li>
-    <% end -%>
-  </ul>
-</p>
+</ul>
 
 <% unless @room.nil? -%>
-  <p>
-    <h3>People</h3>
-    <ul>
-      <% @room.users.each do |user| -%>
-        <li><%= h user.login %></li>
-      <% end -%>
-    </ul>
-  </p>
+  <h3>People</h3>
+  <ul>
+    <% @room.users.each do |user| -%>
+      <li><%= h user.login %></li>
+    <% end -%>
+  </ul>
 <% end -%>
+
+<% if logged_in? -%>
+  You are logged in as <%= h current_user.login %>. <%= link_to "Logout", logout_path %>.
+<% else -%>
+  <%= link_to "Sign up", signup_path  %> or <%= link_to "Login", login_path %>
+<% end -%>
+
