--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
       <title>Collaboratuer</title>
       <%= stylesheet_link_tag "styles"%>
-      <%= javascript_include_tag "jquery", "jquery.hotkeys" %>
+      <%= javascript_include_tag "jquery", "jquery.hotkeys", "application" %>
   </head>
   <body>
     <div id="wrapper">
